--- a/h/hr/hrw/hrw.com.html
+++ b/h/hr/hrw/hrw.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hrw.com privacy policy that was archived on 2001-10-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011022020454id_/http%3A//www.hrw.com/privacy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hrw.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604075926id_/http%3A//www.hrw.com/privacy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 
@@ -81,7 +81,7 @@
 
 <a href="../sales/index.htm">Sales Reps</a> |
 
-<a href="http://go.hrw.com/ndNSAPI.nd/UserReg_rls1/pHome">Register</a> |
+<a href="http://go.hrw.com/hrw.nd/UserReg_rls1/pHome">Register</a> |
 
 <a href="../hrwhelp/index.htm">Help</a>
 
@@ -412,7 +412,7 @@ particular Harcourt company will be posted and will supersede the terms of this 
 
 <a href="../sales/index.htm">Sales Reps</a> |
 
-<a href="http://go.hrw.com/ndNSAPI.nd/UserReg_rls1/pHome">Register</a> |
+<a href="http://go.hrw.com/hrw.nd/UserReg_rls1/pHome">Register</a> |
 
 <a href="../hrwhelp/index.htm">Help</a>
 
