--- a/i/in/int/internetretailer.com.html
+++ b/i/in/int/internetretailer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the internetretailer.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205121102id_/http%3A//internetretailer.com/privacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetretailer.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604184151id_/http%3A//internetretailer.com/privacyPolicy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title> InternetRetailer.com - Press Releases </title>
@@ -154,7 +154,7 @@
 			</td>
 			
 			<td width="7" bgcolor="#0033FF"><img src="images/spacer.gif" height="1" width="1"></td>
-			<td width="153" bgcolor="#0033FF" valign="MIDDLE" align="CENTER"><font face="ARIAL" size="2" color="#FFFFFF"><b>December&nbsp;5, 2001</b></font></td>
+			<td width="153" bgcolor="#0033FF" valign="MIDDLE" align="CENTER"><font face="ARIAL" size="2" color="#FFFFFF"><b>June&nbsp;4, 2002</b></font></td>
 			<td width="1" bgcolor="#000000"><img src="images/spacer.gif" height="1" width="1"></td>
 		</tr>
 		<tr>
@@ -325,11 +325,18 @@
 		<img src="images/spacer.gif" height="7" width="1"><br>
 		<font face="ARIAL" size="2">
 			<b>Vertical Web Media Privacy Policy</b> 
-			<p>The policies below are applicable to Internet Retailer and other sites owned or operated by Vertical Web Media, including but not limited to www.internetretailer.com, unless any such site contains another, separate privacy policy. The Vertical Web Media sites are maintained by Vertical Web Media, 300 South Wacker Drive, Suite 1610, Chicago, IL 60606. 
+			<p>The policies below are applicable to web sites and e-mail newsletters owned or operated by Vertical Web Media, unless any such site or e-mail publication contains another, separate privacy policy. The Vertical Web Media sites are maintained by Vertical Web Media, 300 South Wacker Drive, Suite 1610, Chicago, IL 60606. 
 			</p><p>Vertical Web Media respects each individual user's right to privacy. Vertical Web Media may place a "cookie" on the visitor's hard drive in order to facilitate a user friendly experience. Cookies are small pieces of information that a Web site places on your computer's hard drive for tracking purposes. Vertical Web Media uses cookie information it receives by placing the cookie on user's hard drive to improve the efficiency of customer service on our online subscription based sites, allowing subscribers to easily change addresses, and add or cancel subscriptions by automatically verifying that you are a subscriber. Vertical Web Media also uses cookies to enhance our site content by compiling aggregate information about what specific sections users visit and which pages. Cookies may also be placed by our advertisers or independent third parties who actually operate the servers on which the ads reside. Although Vertical Web Media requests such parties to adhere to appropriate privacy standards and policies, Vertical Web Media is not responsible for the actions or policies of such parties. 
-			</p><p>Vertical Web Media collects personal identifying information, when such information is specifically and knowingly provided, from users during (i)contest, survey, sweepstakes or site registration promotions, and (ii) subscription registration for sites or services requiring such registration information. Vertical Web Media may use this information for marketing and promotional purposes. Vertical Web Media occasionally informs our users of special deals, new products, and other third party product and service offers that we believe our users will find interesting. Users are given the option to choose whether they would like to receive such mailings upon registration. Individual users can request, at any time, that their information not be used for such purposes by sending an e-mail request to Vertical Web Media at the address given above. 
-			</p><p>Although it does not currently rent lists of users, Vertical Web Media may decide in the future to offer companies and organizations that have a product or service believed to be of interest to the user the opportunity to rent our list. Vertical Web Media may share a user's personally-identifiable information with these companies in an effort to help locate these resources. Vertical Web Media will, however, offer the user the opportunity to "opt out" of having their personally-identifiable information shared with third parties that are not affiliated with Vertical Web Media. 
-			</p><p>If a Vertical Web Media user knowingly provides personal information such as a user name or e-mail address in a chat or bulletin board area, that user should be aware that the information provided can be collected and used by others in that area. 
+			</p><p>Vertical Web Media collects personal identifying information, when such information is specifically and knowingly provided from users during (i)contest, survey, sweepstakes or site registration promotions, and (ii) subscription registration for sites or services requiring such registration information. Vertical Web Media may use this information for marketing and promotional purposes. Vertical Web Media occasionally informs our users of special deals, new products, and other third party product and service offers that we believe our users will find interesting. Users are given the option to choose whether they would like to receive such mailings upon registration. Individual users can request, at any time, that their information not be used for such purposes by sending an e-mail request to Vertical Web Media at the address given above. 
+			
+</p><p>Vertical Web Media may decide in the future to offer selected companies and 
+  organizations that have a product or service believed to be of interest to the 
+  user the opportunity to rent our list. Vertical Web Media may share a user's 
+  personally-identifiable information with these companies in an effort to help 
+  locate these resources. Vertical Web Media will, however, offer the user the 
+  opportunity to "opt out" of having their personally-identifiable information 
+  shared with third parties that are not affiliated with Vertical Web Media. 
+</p><p>If a Vertical Web Media user knowingly provides personal information such as a user name or e-mail address in a chat or bulletin board area, that user should be aware that the information provided can be collected and used by others in that area. 
 			</p><p>No information should be submitted to Vertical Web Media by children 16 years of age or under without their parent's or guardian's consent. Vertical Web Media does not monitor the age of its user audience.</p>
 		</font>
 	<!-- END MODS -->
@@ -351,7 +358,7 @@
 		<tr>
 			<td width="1" height="10" bgcolor="#000000"><img src="images/spacer.gif" height="10" width="1"></td>
 			<td width="153" bgcolor="#0033FF"><img src="images/spacer.gif" height="1" width="1"></td>
-			<td rowspan="2" colspan="3" width="452" bgcolor="#0033FF" valign="TOP" align="CENTER" background="images/templateImages/bottomMiddleLineBlack.gif"><font face="ARIAL" size="1" color="#FFFFFF">Copyright © 2001 This content is the property of Vertical Web Media. <a href="privacyPolicy.asp" class="blueSection">Privacy Policy</a></font></td>
+			<td rowspan="2" colspan="3" width="452" bgcolor="#0033FF" valign="TOP" align="CENTER" background="images/templateImages/bottomMiddleLineBlack.gif"><font face="ARIAL" size="1" color="#FFFFFF">Copyright © 2002 This content is the property of Vertical Web Media. <a href="privacyPolicy.asp" class="blueSection">Privacy Policy</a></font></td>
 			<td width="153" bgcolor="#0033FF"><img src="images/spacer.gif" height="1" width="1"></td>
 			<td width="1" bgcolor="#000000"><img src="images/spacer.gif" height="1" width="1"></td>
 		</tr>
