--- a/e/ev/eve/everymac.com.html
+++ b/e/ev/eve/everymac.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the everymac.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205100550id_/http%3A//everymac.com/articles/admin/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the everymac.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604184242id_/http%3A//www.everymac.com/articles/admin/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
    <title>Privacy Policy @ EveryMac.com</title>
@@ -26,7 +26,7 @@
     document.write('<A HREF="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&ajtype=cgi_click&ajkey=' + scatter + '">');
     document.write('<IMG BORDER="1" SRC="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&ajtype=cgi_image&ajkey=' + scatter + '"></A>'); scatter = 0;
 
-// --></script><a href="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&amp;ajtype=cgi_click&amp;ajkey=10263"><img border="1" src="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&amp;ajtype=cgi_image&amp;ajkey=10263"></a><!--/NOEDIT--></p>
+// --></script><a href="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&amp;ajtype=cgi_click&amp;ajkey=628"><img border="1" src="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=468x60_top&amp;ajtype=cgi_image&amp;ajkey=628"></a><!--/NOEDIT--></p>
                </td>
             </tr>
          </tbody></table>
@@ -67,7 +67,7 @@ random = now.getTime();
 }
 document.write('<A HREF="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&ajtype=cgi_click&ajkey=' + random + '">');
 document.write('<IMG BORDER="1" SRC="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&ajtype=cgi_image&ajkey=' + random + '"></A>');
-// --></script><a href="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&amp;ajtype=cgi_click&amp;ajkey=1582146394634"><img border="1" src="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&amp;ajtype=cgi_image&amp;ajkey=1582146394634"></a><!--/NOEDIT-->
+// --></script><a href="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&amp;ajtype=cgi_click&amp;ajkey=1582146390175"><img border="1" src="http://adserver.everymac.com/adserver/adjuggler/AdJuggler?Pool=125x125_left&amp;ajtype=cgi_image&amp;ajkey=1582146390175"></a><!--/NOEDIT-->
                   
                   <p><br>
                   <br>
