--- a/h/ho/hom/hometownannapolis.com.html
+++ b/h/ho/hom/hometownannapolis.com.html
@@ -1,33 +1,33 @@
-<!--The following is the downloaded HTML source of the hometownannapolis.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201202441id_/http%3A//hometownannapolis.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hometownannapolis.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605025245id_/http%3A//hometownannapolis.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>HometownAnnapolis.com, Privacy Policy &amp; Terms of Use</title></head>    <body bgcolor="white" text="black" link="navy" vlink="purple" alink="#FAA7F7">  <center>  <table width="610" border="0" cellpadding="0" cellspacing="0">  <tbody><tr>   <td width="300" valign="top">    <a href="/index.html"><img src="/art/insidemast2.gif" width="295" height="75" border="0" align="left"></a>   </td>   <td width="155" align="right" valign="top">    <a href="/cgi-bin/clickthrough/HA_RealEstateClassifieds.gif"><img src="/art/boxads/HA_RealEstateClassifieds.gif" width="150" height="75" border="0"></a>   </td>   <td width="155" align="right" valign="top">    <a href="/cgi-bin/clickthrough/LW_auto.gif"><img src="/art/boxads/LW_auto.gif" width="150" height="75" border="0"></a>   </td>  </tr>  </tbody></table>    <img src="/art/whitedot.gif" width="1" height="8"><br>    <table width="610" border="0" cellpadding="0" cellspacing="0">  <tbody><tr>   <td colspan="4" align="center">    <img src="/art/navbar4.gif" width="610" height="32" border="0" usemap="#navigation2"><map name="navigation2">
-  <area shape="rect" coords="518,16,607,30" href="http://www.hometownannapolis.com/cgi-bin/read/NBH.html" alt="Neighborhoods">
-  <area shape="rect" coords="479,16,506,30" href="http://www.hometownannapolis.com/pets_dogsworld.html" alt="Dogsworld">
-  <area shape="rect" coords="386,16,465,30" href="http://www.hometownannapolis.com/cal_lively.html" alt="Lively events">
-  <area shape="rect" coords="311,16,372,30" href="http://www.hometownannapolis.com/cgi-bin/read/FOR.html" alt="Obituaries">
-  <area shape="rect" coords="250,16,297,30" href="http://www.hometownannapolis.com/cgi-bin/read/OPN.html" alt="Opinion">
-  <area shape="rect" coords="169,16,236,30" href="http://www.hometownannapolis.com/cgi-bin/read/FOR.html" alt="Police Beat">
-  <area shape="rect" coords="116,16,155,30" href="http://www.hometownannapolis.com/cgi-bin/read/SPO.html" alt="Sports">
-  <area shape="rect" coords="66,16,100,30" href="http://www.hometownannapolis.com/" alt="Our homepage">
+  <area shape="rect" coords="0,0,69,14" href="http://www.hometownannapolis.com/cgi-bin/read/TOP.html" alt="Top Stories">
+  <area shape="rect" coords="86,0,130,14" href="http://www.hometownannapolis.com/cgi-bin/search" alt="Search our site!">
+  <area shape="rect" coords="143,0,210,14" href="http://www.hometownannapolis.com/classifieds.html" alt="Classifieds">
+  <area shape="rect" coords="224,0,278,14" href="http://www.hometownannapolis.com/vault" alt="Archives">
+  <area shape="rect" coords="296,0,386,14" href="http://www.hometownannapolis.com/localweb.html" alt="Local Directory">
+  <area shape="rect" coords="403,0,486,14" href="https://www.capitalonline.com/contactsubscribe.html" alt="Subscriptions to The Capital">
+  <area shape="rect" coords="499,0,567,14" href="http://www.hometownannapolis.com/contactus.html" alt="Contact us">
+  <area shape="rect" coords="581,0,606,14" href="http://www.hometownannapolis.com/politics2.html" alt="This week's poll">
+
   <area shape="rect" coords="1,16,51,30" href="http://www.hometownannapolis.com/site_index2.html" alt="Site Map">
-  <area shape="rect" coords="575,0,609,14" href="http://www.hometownannapolis.com/politics2.html" alt="This week's poll">
-  <area shape="rect" coords="492,0,571,14" href="http://www.hometownannapolis.com/contactus.html" alt="Contact us">
-  <area shape="rect" coords="414,0,488,14" href="http://www.hometownannapolis.com/personals/cgi-bin/search" alt="Personals">
-  <area shape="rect" coords="298,0,410,14" href="http://www.hometownannapolis.com/localweb.html" alt="Local Directory">
-  <area shape="rect" coords="228,0,294,14" href="http://www.hometownannapolis.com/vault" alt="Archives">
-  <area shape="rect" coords="144,0,224,14" href="http://www.hometownannapolis.com/classifieds.html" alt="Classifieds">
-  <area shape="rect" coords="84,0,140,14" href="http://www.hometownannapolis.com/cgi-bin/search" alt="Search our site!">
-  <area shape="rect" coords="0,0,80,14" href="http://www.hometownannapolis.com/cgi-bin/read/TOP.html" alt="Top Stories">
+  <area shape="rect" coords="66,16,100,30" href="http://www.hometownannapolis.com/" alt="Our homepage">
+  <area shape="rect" coords="116,16,155,30" href="http://www.hometownannapolis.com/cgi-bin/read/SPO.html" alt="Sports">
+  <area shape="rect" coords="169,16,236,30" href="http://www.hometownannapolis.com/cgi-bin/read/FOR.html" alt="Police Beat">
+  <area shape="rect" coords="250,16,297,30" href="http://www.hometownannapolis.com/cgi-bin/read/OPN.html" alt="Opinion">
+  <area shape="rect" coords="311,16,372,30" href="http://www.hometownannapolis.com/cgi-bin/read/FOR.html" alt="Obituaries">
+  <area shape="rect" coords="386,16,465,30" href="http://www.hometownannapolis.com/cal_lively.html" alt="Lively events">
+  <area shape="rect" coords="479,16,506,30" href="http://www.hometownannapolis.com/pets_dogsworld.html" alt="Dogsworld">
+  <area shape="rect" coords="518,16,607,30" href="http://www.hometownannapolis.com/cgi-bin/read/NBH.html" alt="Neighborhoods">
 </map>
     <img src="/art/whitedot.gif" width="1" height="8"><br>   </td>  </tr>  <tr>   <td width="150" valign="top" align="center">        <!-- Server Side Include for pull-down navigation -->
  <center><form name="goform"></form></center><!-- Stop Indexing -->
 <select name="URL" width="150" onchange="window.location=document.goform.URL.options[document.goform.URL.selectedIndex].value">  
 <option>Contents? Click!  
-</option><option value="http://www.accessmagazine.com/homepage/writecookie.jsp?PaperID=46&amp;Day=Sunday">Access Mag  
-</option><option value="/localweb.html">Advertising
-</option><option value="http://www.annapolisgifts.com">Annapolis Gifts  
-</option><option value="/ant_tiffany.html">Antiques  
+</option><option value="/localweb.html">Advertising - Web
+</option><option value="/contactcapital.html#ad">Advertising - Print
+</option><option value="/lw_antiques.html">Antiques  
 </option><option value="/vault">Archives  
 </option><option value="/lw_boating.html">Boating Directory
 </option><option value="/bowie_index.html">Bowie
@@ -43,7 +43,8 @@
 </option><option value="/cgi-bin/read/ENT.html">Entertainment  
 </option><option value="/fish_report.html">Fishing  
 </option><option value="/food1.html">Food &amp; Wine
-</option><option value="http://www.annapolisgifts.com">Gifts  
+</option><option value="http://www.annapolisgifts.com">Gifts 
+</option><option value="http://www.hometownglenburnie.com">Glen Burnie 
 </option><option value="/cgi-bin/read/GOV.html">Government  
 </option><option value="/healthservices.html">Health Services  
 </option><option value="http://www.hometownannapolis.com">Hometown  
@@ -115,5 +116,6 @@ Use of any Capital-Gazette Communications site constitutes acceptance of the abo
 <br>
 <a href="contactus.html">Contact us!</a><br>
 
-</p></td></tr></tbody></table>        <p>      </p></td>      <td width="5"><img src="/art/whitedot.gif" width="5" height="1">   </td>  </tr>      <tr>   <td colspan="4" align="center">    &nbsp;<br>    <a href="/cgi-bin/clickthrough/capcookbanner.jpg"><img src="/art/banners/capcookbanner.jpg" width="430" height="60" border="0" align="Top"></a>      &nbsp;    <p>        <font size="-1"><i>Copyright © 2001
+</p></td></tr></tbody></table>        <p>      </p></td>      <td width="5"><img src="/art/whitedot.gif" width="5" height="1">   </td>  </tr>      <tr>   <td colspan="4" align="center">    &nbsp;<br>    <a href="/cgi-bin/clickthrough/newchesaudio.gif"><img src="/art/banners/newchesaudio.gif" width="430" height="60" border="0" align="Top" alt="Chesapeake &amp; Potomac Audio Visual Services-Serving Annapolis, the Eastern Shore, and Baltimore, Maryland"></a>
+      &nbsp;    <p>        <font size="-1"><i>Copyright © 2001
 , The Capital</i></font>   </p></td>  </tr>    </tbody></table>  </center>     </body></html>
