--- a/d/du/dux/duxcw.com.html
+++ b/d/du/dux/duxcw.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the duxcw.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201215656id_/http%3A//duxcw.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the duxcw.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605033417id_/http%3A//www.duxcw.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -12,9 +12,9 @@
 
 <body background="images/bg.gif"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
 
-<table border="0" cellpadding="0" width="621">
+<table border="0" cellpadding="0" width="624" cellspacing="0">
   <tbody><tr>
-    <td valign="top" align="left" width="136">
+    <td valign="top" align="left" width="123">
     <!--webbot
       bot="Include" u-include="_include/left.htm" tag="BODY" startspan
       -->
@@ -30,6 +30,10 @@
 </font></b></a><a href="digest/Reviews/index.html" style="text-decoration:
         none"><b><font color="#FFFFFF">Reviews<br>
 </font></b></a></font><img border="0" src="images/whln.gif" width="67" height="1" vspace="2"><br>
+<b>
+<font color="#FFFFFF" face="Arial" size="2">
+<a href="prod/index.html" style="text-decoration: none">
+<font color="#FFFFFF">Online Store</font></a></font></b><br>
 <font face="Arial" size="2"><b><a href="faq/index.html" style="text-decoration:
         none"><font color="#FFFFFF">FAQ<br>
 </font></a><a href="dcforum/index.html" style="text-decoration:
@@ -83,12 +87,12 @@
     </tr>
   </tbody></table>
 
-<!--webbot bot="Include" i-checksum="15704" endspan -->
+<!--webbot bot="Include" i-checksum="44539" endspan -->
     </p><p>&nbsp;</p></td>
-    <td valign="top" align="left">
+    <td valign="top" align="left" width="495">
     <h1 align="center"><font face="Arial" size="4">Dux Computer Digest Privacy 
     Statement<br>
-    </font><font face="Arial" size="1">Last updated: 6/30/01</font></h1>
+    </font><font face="Arial" size="1">Last updated: 4/4/02</font></h1>
     <font face="Arial"><input name="page" type="hidden" value="4">
     </font><p><font face="Arial">Dux Computer Works has created this privacy statement in order to 
     demonstrate our firm commitment to privacy. The following discloses our 
@@ -97,9 +101,11 @@
     <p><font face="Arial">We use your IP address to help diagnose problems with 
     our server, and to administer our Web site. Your IP address is used to help 
     identify you and your shopping cart.</font> </p>
-    <p><font face="Arial">Our site's <a href="info_req.htm" target="_blank"><b>
-    Information Request Form</b></a><b> </b>and <b>
-    <a href="http://duxcw.com/forum/" target="_blank">Discusion Forum Post Form</a></b> 
+    <p><font face="Arial">Our site's <b>
+    <a href="info_req.htm" target="_blank">Information Request Form</a>,</b> <b>
+    <a target="_blank" href="dcforum/index.html">Discusion Forum</a>, </b>and<b>
+    <a target="_blank" href="newsltr/index.html">Newsletter&nbsp; Subscription 
+    Form</a></b> 
     require users to give us contact information (like their name and email 
     address). The customer's contact information is used to contact the visitor 
     when necessary. Users may opt-out of receiving future mailings; see the 
@@ -107,31 +113,45 @@
     <p><font face="Arial">This site contains links to other sites. <b>Dux 
     Computer Works and Digest</b> is not responsible for the privacy practices 
     or the content of such Web sites.</font> </p>
-    <p><font face="Arial">Our site uses a Shopping Cart and Order Form for 
-    customers to order products and services. We collect visitor's contact 
-    information (like their E-Mail address) and financial information (like 
-    their account or credit card numbers). Contact information from the order 
-    form is used to send orders to our customers. The customer's contact 
-    information is used to get in touch with the visitor when necessary. Users 
-    may opt-out of receiving any future mailings; see the choice/opt-out section 
-    below. Financial information that is collected is used to bill the user for 
-    products and services.</font> </p>
-    <p><font face="Arial"><em>Dux Computer Works works with a third party that 
-    serves ads to this site.&nbsp; To find out more about how Engage Business 
-    Media manages the privacy of information in conjunction with serving ads on 
-    this site, please go to </em></font><i><font face="Arial">
-    <a href="http://www.engage.com/privacy/">http://www.engage.com/privacy</a>.</font></i></p>
-    <p><font face="Arial">We also use other outside ad companies to display ads 
-    on our site. Ads may contain cookies, and appear to be coming from our site, 
-    but in reality they are coming from our partners who are serving ads on our 
-    site. Our site does not use cookies. We do not have access to any 
-    information about you from cookies you might receive while visiting our 
-    site.</font></p>
+    <p><font face="Arial"><em style="font-style: normal">Dux Computer Works uses 
+    the services of&nbsp; third parties that 
+    serve ads to this site.&nbsp; </em>We also use other outside ad companies to 
+    display ads on our site. Ads may contain cookies, and appear to be coming 
+    from our site, but in reality they are coming from our partners who are 
+    serving ads on our site. <em style="font-style: normal">&nbsp;Currently, the 
+    following companies are serving ads to this web site:</em></font></p>
+    <div align="center">
+      <center>
+      <table border="1" cellspacing="0" cellpadding="4" width="500">
+        <tbody><tr>
+          <td width="153">
+          <p align="center"><b><font face="Arial">COMPANY</font></b></p></td>
+          <td width="325">
+          <p align="center"><b><font face="Arial">PRIVACY POLICY</font></b></p></td>
+        </tr>
+        <tr>
+          <td width="153"><font face="Arial">BURST! Media , LLC.</font></td>
+          <td width="325"><font face="Arial"><em style="font-style: normal">
+          <a href="http://www.burstmedia.com/release/privacy.asp">
+          http://www.burstmedia.com/release/privacy.asp</a></em></font></td>
+        </tr>
+        <tr>
+          <td width="153"><font face="Arial">Tribal Fusion, Inc.</font></td>
+          <td width="325"><font face="Arial"><em style="font-style: normal">
+          <a href="http://www.burstmedia.com/release/privacy.asp">
+          http://www.burstmedia.com/release/privacy.asp</a></em></font></td>
+        </tr>
+      </tbody></table>
+      </center>
+    </div>
     <h2><font face="Arial">Public Forums</font></h2>
     <p><font face="Arial">This site makes Discussion Forum available to its 
     users. Please remember that any information that is disclosed in these areas 
     becomes public information and you should exercise caution when deciding to 
-    disclose your personal information.</font> </p>
+    disclose your personal information.</font>&nbsp; <font face="Arial">Our site 
+    uses cookies only for the automated login and other functions in our forums.&nbsp; 
+    We do not do not use the information from the cookies you might receive 
+    while visiting our site for any other purpose.</font></p>
     <h2><font face="Arial">Security</font></h2>
     <p><font face="Arial">This site has security measures in place to protect 
     the loss, misuse and alteration of the information under our control.&nbsp;</font>
@@ -155,9 +175,13 @@
     <h2><font face="Arial">Correct/Update</font></h2>
     <p><font face="Arial">This site gives users the following options for 
     changing and modifying information previously provided.</font> </p>
-    <p><font face="Arial">1.&nbsp; E-mail <a href="mailto:admin@duxcw.com">
+    <p><font face="Arial">1.&nbsp; Our <b>
+    <a target="_blank" href="newsltr/index.html">Newsletter</a></b> has an 
+    automated user interface for unsubscribing.&nbsp; Please use it to 
+    unsubscribe from this service.</font></p>
+    <p><font face="Arial">2.&nbsp; E-mail <a href="mailto:admin@duxcw.com">
     admin@duxcw.com</a></font> </p>
-    <p><font face="Arial">2.&nbsp; Send mail to the following postal address:</font>
+    <p><font face="Arial">3.&nbsp; Send mail to the following postal address:</font>
     </p>
     <blockquote>
       <address>
@@ -167,8 +191,10 @@
         <font face="Arial">9 Vermont St., Sanford ME 04073 USA</font>
       </address>
     </blockquote>
-    <p><font face="Arial">3.&nbsp; Call the following telephone number: 
+    <p><font face="Arial">4.&nbsp; Call the following telephone number: 
     1-207-324-3737</font></p>
+    <p><font face="Arial">5.&nbsp; Use our
+    <a target="_blank" href="info_req.htm">Info Request/Feedback Form</a>.</font></p>
     <h2><font face="Arial">Contacting the Web Site</font></h2>
     <p><font face="Arial">If you have any questions about this privacy 
     statement, the practices of this site, or your dealings with this Web site, 
@@ -211,19 +237,15 @@
       <a href="digest/Reviews/index.html">Reviews</a> |
       <a href="faq/index.html">FAQ</a> | <a href="dcforum/index.html">
       Forums</a> | <a href="links/index.html">Links</a> |
-      <a href="news/index.html">News</a> |<br>
-      | <a href="newsltr/index.html">Newsletter</a> |
+      <a href="news/index.html">News</a> | <a href="newsltr/index.html">Newsletter</a> |
       <a href="about/aboutdux.htm">About Dux</a> | <a href="ad/index.html">
       Advertising</a> | <a href="contact.htm">Contact Info</a> |
       <a href="privacy.htm">Privacy</a> |</b></font></p>
-      <p align="left"><font face="Arial"><font size="2" color="black">Please 
-      send comments and questions to: <a href="contact.htm"><b>
-      webmaster@duxcw.com</b></a><br>
-      </font><a href="trademark.htm"><font size="1">Copyright, Disclaimer, 
+      <p align="left"><font face="Arial"><a href="trademark.htm"><font size="1">Copyright, Disclaimer, 
       and Trademark Information</font></a><font size="2" color="#000000"> </font>
-      <font size="1" color="#000000">Copyright © 1997-2000 Larry F. Byard.&nbsp; 
+      <font size="1" color="#000000">Copyright © 1996-2002 Larry F. Byard.&nbsp; 
       All rights reserved.&nbsp; </font></font><font face="Arial" size="1">This 
-      material or parts thereof may not be published, broadcast, rewritten, or 
+      material or parts thereof may not be published, broadcasted, rewritten, or 
       redistributed by any means whatsoever without explicit, written permission 
       from the author.</font></p></td>
     </tr>
@@ -231,6 +253,5 @@
 </div>
 
 </td></tr><!--msnavigation--></tbody></table>
-
 
 </body></html>
